# SportsEquipmentManagementSystem

./: README.md  ReadMe.txt  SRS.docx  TEST.docx  presentation.pptx
cfg/: cfg.txt
code/: AddEquipmentController.cpp  AddEquipmentController.h  Application.cpp  Application.h  AvailableEquipments.cpp  AvailableEquipments.h  CMakeLists.txt  Guard.cpp  Guard.h  Makefile  OutstandingEquipments.cpp  OutstandingEquipments.h  SecretaryController.cpp  SecretaryController.h  SecretaryHomePageController.cpp  SecretaryHomePageController.h  SecretaryLoginController.cpp  SecretaryLoginController.h  Student.cpp  Student.h  StudentController.cpp  StudentController.h  StudentDuesController.cpp  StudentDuesController.h  StudentHomePageController.cpp  StudentHomePageController.h  StudentIssueEquipmentController.cpp  StudentIssueEquipmentController.h  StudentLoginController.cpp  StudentLoginController.h  StudentReturnEquipmentController.cpp  StudentReturnEquipmentController.h  TotalEquipments.cpp  TotalEquipments.h  ViewByAvailabilityController.cpp  ViewByAvailabilityController.h  ViewByCategoryController.cpp  ViewByCategoryController.h  ViewByOutstandingController.cpp  ViewByOutstandingController.h  (+7 more)
data/: availableequipments.sql  guard.sql  outstandingequipments.sql  studenttable.sql  totalequipments.sql
